# amboso-template

./: .gitignore  Makefile  Makefile.am  README.md  anwrap  configure.ac
.github/workflows/: makefile.yml
src/: hello_world.c
static/: amboso.h
tests/error/: bad_dir  bad_dir.stdout  bad_vers  manyflags_T  manyflags_T.stderr  manyflags_T.stdout  manyflags_t  manyflags_t.stderr  manyflags_t.stdout
tests/ok/: good_vers  good_vers.stdout  runtimes  runtimes.stdout  vershw
